8365656: [ubsan] G1CSetCandidateGroup::liveness() reports division by 0

Reviewed-by: iwalulya, ayang